--- a/public/home_assets/style.css
+++ b/public/home_assets/style.css
@@ -1,6 +1,7 @@
 body {
   min-height: 75rem;
   padding-top: 4.5rem;
+  font-family: Roboto,sans-serif;
 }
 
 * {
@@ -11,6 +12,11 @@ body {
   position: relative;
   display: inline-block;
 }
+
+.carousel-inner {
+  padding-right: 3px;
+}
+
 
 .dropdown-content {
   display: none;
@@ -154,7 +160,7 @@ body {
 }
 
 .blog-item {
-  box-shadow: 0 4px 0px 0 rgba(0, 0, 0, 0.2), 0 6px 1px 0 rgba(0, 0, 0, 0.19);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .btn-more {
@@ -197,6 +203,10 @@ body {
   .container {
     max-width: 1520px;
   }
+  /* nav {
+    padding-right: 0 !important;
+    width: 78% !important;
+  } */
 }
 
 /* FOOTER */
@@ -224,10 +234,6 @@ footer .footer-content {
 
 .row.mt-3.foo {
   margin-left: 5px;
-}
-
-#blog .title,.summary {
-  padding-left: 5px;
 }
 
 /*san pham*/
