--- a/public/home_assets/style.css
+++ b/public/home_assets/style.css
@@ -9,11 +9,93 @@ body {
   padding: 0;
 }
 
+.btn {
+  background: white;
+  border: 1px solid #244389;
+}
+
+.btn.focus, .btn:focus {
+  box-shadow: none;
+}
+
+.container-1{
+  width: 300px;
+  vertical-align: middle;
+  white-space: nowrap;
+  position: relative;
+}
+
+.container-1 input#search{
+  width: 300px;
+  height: 50px;
+  background: #ffffff;
+  border: 1px solid #395695;
+  font-size: 10pt;
+  float: left;
+  color: #63717f;
+  padding-left: 45px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+}
+
+.dropdown-divider {
+  border-top: 0;
+}
+
+.container-1 input#search::-webkit-input-placeholder {
+  color: #65737e;
+}
+
+.container-1 input#search:-moz-placeholder { /* Firefox 18- */
+  color: #65737e;  
+}
+
+.container-1 input#search::-moz-placeholder {  /* Firefox 19+ */
+  color: #65737e;  
+}
+
+.container-1 input#search:-ms-input-placeholder {  
+  color: #65737e;  
+}
+
+.container-1 .icon{
+  position: absolute;
+  top: 50%;
+  margin-left: 17px;
+  margin-top: 17px;
+  z-index: 1;
+  color: #4f5b66;
+}
+
+.container-1 input#search:hover, .container-1 input#search:focus, .container-1 input#search:active{
+  outline:none;
+  background: #ffffff;
+}
+
 #navbarSupportedContent ul li a {
   color: #214188;
   font-weight: bold;
   height: 100%;
   cursor: pointer;
+}
+
+.btn-1 {
+  display: inline-block;
+  font-weight: 400;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  border: 1px solid transparent;
+  padding: .375rem .75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  border-radius: .25rem;
+  transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
 .dropdown {
   position: relative;
@@ -219,8 +301,7 @@ body {
 /* FOOTER */
 footer .footer-content {
   background-color: #214188;
-  padding-top: 3%;
-  padding-bottom: 1%;
+  padding-top: 1%;
   color: white;
 }
 
